<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

        <View
            android:id="@+id/view_principal"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:background="@drawable/background_view"
            />

        <GridLayout
            android:id="@+id/grid_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="-80dp"
            android:rowCount="3"
            android:columnCount="2"
            android:layout_margin="24dp"
            >
            <!--            home-->
            <androidx.cardview.widget.CardView
                android:id="@+id/card_home"
                android:layout_width="wrap_content"
                android:layout_height="104dp"
                app:cardElevation="12dp"
                app:cardCornerRadius="15dp"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_row="0"
                android:layout_column="0"
                android:layout_margin="5dp"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical"
                    >

                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_home" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/Home"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textStyle="bold" />


                </LinearLayout>

            </androidx.cardview.widget.CardView>
<!--            cliente-->
            <androidx.cardview.widget.CardView
                android:id="@+id/card_cli"
                android:layout_width="wrap_content"
                android:layout_height="104dp"
                app:cardElevation="12dp"
                app:cardCornerRadius="15dp"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_row="0"
                android:layout_column="1"
                android:layout_margin="5dp"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical"
                    >

                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_add_user" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/cli"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textStyle="bold" />


                </LinearLayout>

            </androidx.cardview.widget.CardView>
<!--            produto-->
            <androidx.cardview.widget.CardView
                android:id="@+id/card_prod"
                android:layout_width="wrap_content"
                android:layout_height="104dp"
                app:cardElevation="12dp"
                app:cardCornerRadius="15dp"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_row="1"
                android:layout_column="0"
                android:layout_margin="5dp"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical"
                    >

                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_factory" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/prod"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textStyle="bold" />


                </LinearLayout>

            </androidx.cardview.widget.CardView>
<!--            notas-->
            <androidx.cardview.widget.CardView
                android:id="@+id/card_serv"
                android:layout_width="wrap_content"
                android:layout_height="104dp"
                app:cardElevation="12dp"
                app:cardCornerRadius="15dp"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_row="1"
                android:layout_column="1"
                android:layout_margin="5dp"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical"
                    >

                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_service" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/servicos"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textStyle="bold" />


                </LinearLayout>

            </androidx.cardview.widget.CardView>
<!--            vendas-->
            <androidx.cardview.widget.CardView
                android:id="@+id/card_venda"
                android:layout_width="wrap_content"
                android:layout_height="104dp"
                app:cardElevation="12dp"
                app:cardCornerRadius="15dp"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_row="2"
                android:layout_column="0"
                android:layout_margin="5dp"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical"
                    >

                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_sale" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/Venda"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textStyle="bold" />


                </LinearLayout>

            </androidx.cardview.widget.CardView>
<!--            sair-->
            <androidx.cardview.widget.CardView
                android:id="@+id/card_sair"
                android:layout_width="wrap_content"
                android:layout_height="104dp"
                app:cardElevation="12dp"
                app:cardCornerRadius="15dp"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_row="2"
                android:layout_column="1"
                android:layout_margin="5dp"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical"
                    >

                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_exit" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/sair"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textStyle="bold" />


                </LinearLayout>

            </androidx.cardview.widget.CardView>


        </GridLayout>

</RelativeLayout>